# PathSim

./: .clang-tidy  .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  PathSim.js  PathSim.wasm  README.md  index.html  vcpkg.json
.github/workflows/: ci.yml  release.yml
src/: main.cpp
src/algo/: AStar.cpp  AStar.hpp  AlgoUtils.cpp  AlgoUtils.hpp  BFS.cpp  BFS.hpp  Dijkstra.cpp  Dijkstra.hpp  MazeGen.cpp  MazeGen.hpp  MultiPath.cpp  MultiPath.hpp  Playback.cpp  Playback.hpp
src/core/: Grid.cpp  Grid.hpp  Types.hpp
src/ui/: GridRenderer.cpp  GridRenderer.hpp  KeyboardShortcuts.cpp  KeyboardShortcuts.hpp  MenuBar.cpp  MenuBar.hpp  Persistence.cpp  Persistence.hpp  StatsPanel.cpp  StatsPanel.hpp  ViewSettings.hpp
tests/: astar_tests.cpp  bfs_tests.cpp  diagonal_tests.cpp  dijkstra_tests.cpp  grid_tests.cpp  mazegen_tests.cpp  multipath_tests.cpp  oneway_tests.cpp  persistence_tests.cpp  playback_tests.cpp  waypoint_tests.cpp
web/: shell.html
